Grid starting higher up by default

--- a/newtab.html
+++ b/newtab.html
@@ -16,12 +16,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
             min-height: 100vh;
+            margin-top: 64px;
         }
         #favoritesGrid {
-            padding-top: 64px;
-            padding-bottom: 64px;
+            margin-bottom: 64px;
         }
         .grid {
             display: grid;
