--- a/newtab.html
+++ b/newtab.html
@@ -180,6 +180,14 @@
             }
         }
 
+        // --- URL Scheme Helper ---
+        function prependHttpSchemeIfNeeded(url) {
+            if (!url.match(/^https?:\/\/.+/)) {
+                url = 'http://' + url; // Default to http if no scheme
+            }
+            return url
+        }
+
         // --- Render Grid ---
         async function renderGrid() {
             const grid = document.getElementById('favoritesGrid');
@@ -478,23 +486,21 @@
                     newsSection.appendChild(container);
                 }
 
-                // If there's no API key, show message and skip fetch
-                if (!NEWS_API_KEY) {
-                    setSpinning(false);
+                function showApiKeyUi(message) {
                     newsSection.innerHTML += `<div style="color:#a00;margin-top:12px;display:flex;flex-direction:column;align-items:center;width:100%;">
-        <button id="addApiKeyBtn" style="display:inline-flex;align-items:center;gap:8px;background:#222;color:#fff;border:none;border-radius:6px;padding:10px 18px;font-size:1em;cursor:pointer;box-shadow:0 2px 8px #0006;">
-            <span style="display:inline-flex;align-items:center;">
-                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="gray" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="8" cy="15" r="3"/>
-                    <path d="M10.6 13L20 4.2M19 5.5l2 2M16.5 7.5l2 2"/>
-                </svg>
-            </span>
-            Click here to add API Key
-        </button>
-        <span style="color:#888;font-size:0.80em;margin-top:8px;text-align:center;display:block;">
-            <a href="https://newsapi.org/register" target="_blank" style="color:#b00;text-decoration:underline;">Sign up for a free API key NewsAPI.org</a>
-        </span>
-    </div>`;
+                        <button id="addApiKeyBtn" style="display:inline-flex;align-items:center;gap:8px;background:#222;color:#fff;border:none;border-radius:6px;padding:10px 18px;font-size:1em;cursor:pointer;box-shadow:0 2px 8px #0006;">
+                            <span style="display:inline-flex;align-items:center;">
+                                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="gray" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+                                    <circle cx="8" cy="15" r="3"/>
+                                    <path d="M10.6 13L20 4.2M19 5.5l2 2M16.5 7.5l2 2"/>
+                                </svg>
+                            </span>
+                            Click here to add API Key
+                        </button>
+                        <span style="color:#888;font-size:0.80em;margin-top:8px;text-align:center;display:block;">
+                            ${message ? message : `<a href="https://newsapi.org/register" target="_blank" style="color:#b00;text-decoration:underline;">Sign up for a free API key NewsAPI.org</a>`}
+                        </span>
+                    </div>`;
                     setTimeout(() => {
                         const btn = document.getElementById('addApiKeyBtn');
                         if (btn) btn.onclick = (e) => {
@@ -502,6 +508,12 @@
                             openApiKeyModal();
                         };
                     }, 0);
+                }
+
+                // If there's no API key, show message and skip fetch
+                if (!NEWS_API_KEY) {
+                    setSpinning(false);
+                    showApiKeyUi();
                     return;
                 }
 
@@ -513,6 +525,17 @@
                     fetch(proxiedUrl)
                         .then(response => response.json())
                         .then(data => {
+                            // Handle NewsAPI 401 error with apiKeyInvalid
+                            if (
+                                data &&
+                                data.status === "error" &&
+                                data.code === "apiKeyInvalid" &&
+                                typeof data.message === "string"
+                            ) {
+                                setSpinning(false);
+                                showApiKeyUi(data.message);
+                                return;
+                            }
                             let storage = {
                                 articles: data.articles || [],
                                 fetchedAt: new Date().toISOString()
@@ -538,11 +561,6 @@
                 url: site.url,
                 onSave: async (name, url) => {
                     const sites = loadSites();
-
-                    if (url.indexOf('http://') !== 0 && url.indexOf('https://') !== 0) {
-                        url = 'http://' + url; // Default to http if no scheme
-                    }
-
                     sites[index].name = name;
                     sites[index].url = url;
                     sites[index].favicon = getFaviconUrl(url);
@@ -564,6 +582,7 @@
                 name: '',
                 url: '',
                 onSave: async (name, url) => {
+                    url = prependHttpSchemeIfNeeded(url);
                     if (!name) name = url;
                     const favicon = getFaviconUrl(url);
                     const sites = loadSites();
@@ -628,9 +647,6 @@
                 if (e) e.preventDefault();
                 const newName = document.getElementById('modalName').value.trim();
                 let newUrl = document.getElementById('modalUrl').value.trim();
-                if (!newUrl.match(/^https?:\/\/.+/)) {
-                    newUrl = 'http://' + newUrl; // Default to http if no scheme
-                }
                 modalRoot.innerHTML = '';
                 window.removeEventListener('keydown', escHandler);
                 await onSave(newName, newUrl);
